[package]
name = "hybrid_vec"
version = "0.1.0"
authors = ["Ali Mecerhed <ali@yusofleet.com>"]
edition = "2018"

[dependencies]
rand = "0.5.0"
criterion = "0.3.0"

[dev-dependencies]
criterion = "0.3.0"
rand = "0.5.0"

[[bin]]
name = "criterion_bench"
path = "src/benches/criterion_bench.rs"
harness = false

[[bench]]
name = "criterion_bench"
path = "src/benches/criterion_bench.rs"
harness = false